welcome.lessons.welcome.array.has271.Has271.scala.code
def has271(nums:Array[Int]): Boolean = {
	var flag:Boolean=false;
	if (nums.length < 3) {
		flag = false;
	}
	else {
		for (i<- 0 to nums.length-3) {
			if ((nums(i)+5 == (nums(i+1))) 
				&& MATH.abs(nums(i)-1 - (nums (i+2))) <= 2) {
					flag = true;
			}
			
		}
	}
	return flag;
}
